# dshackle

./: .editorconfig  .envrc  .gitignore  .gitmodules  Cargo.toml  Dockerfile  LICENSE  Makefile  README.adoc  build.gradle  build.rs  gradle.properties  settings.gradle
.github/: test_java.security
.github/workflows/: artifacts.yaml  integration-test.yaml  publish.yaml  static.yml  test.yaml  unit-test.yaml
buildSrc/: build.gradle.kts
dashboard/: README.md  dshackle.json
dashboard/alerts/: dshackle.yml
demo/: test.html
demo/quick-start/: dshackle.yaml  upstreams.yaml
docs/: 00-intro.adoc  01-architecture-intro.adoc  02-quick-start.adoc  03-server-config.adoc  04-upstream-config.adoc  05-start.adoc  06-methods.adoc  06-monitoring.adoc  07-authentication.adoc  07-methods.adoc  08-authentication.adoc  09-caching.adoc  09-quorum-and-selectors.adoc  10-caching.adoc  10-client-libraries.adoc  11-client-libraries.adoc  99-ending.adoc  README.adoc  networks.html  reference-configuration.adoc  tls.adoc
dshackle-cli/: README.md  package-lock.json  package.json
dshackle-cli/proto/: blockchain.proto
dshackle-cli/src/: cli.js  grpc-clent.js
foundation/: build.gradle
gradle/: libs.versions.toml
nix/: default.nix  nixpkgs.nix  release.nix  sources.json  sources.nix
nix/lib/: force_cached.nix
nix/pkgs/protoc-gen-grpc-java/: default.nix
proto/: README.adoc  blockchain.proto  cache.proto  common.proto
src/: blockchain.rs  config.rs  global.rs  health.rs  main.rs  server.rs  signature.rs  tls.rs
src/cache/: bitcoin_block_cache.rs  bitcoin_codec.rs  block_by_hash.rs  caching_head.rs  caching_upstream.rs  ethereum_block_cache.rs  ethereum_codec.rs  ethereum_full_block.rs  ethereum_normalizer.rs  height_by_hash.rs  height_cache.rs  mod.rs  normalizing_upstream.rs  receipt_by_hash.rs  redis_cache.rs  redis_proto.rs  tx_by_hash.rs
src/config/: bytes.rs  cache.rs  env.rs  health.rs  log.rs  main_config.rs  mod.rs  monitoring.rs  proxy.rs  signature.rs  tls.rs  tokens.rs  upstreams.rs
src/data/: block_container.rs  hash_id.rs  mod.rs  tx_container.rs
src/jsonrpc/: mod.rs
src/logs/: access.rs  context.rs  encoding.rs  mod.rs  record.rs  request.rs  writer.rs
src/main/proto/: cache.proto
src/main/resources/: application.properties  application.yml  banner.txt  (+3 more)
src/metrics/: fork.rs  grpc.rs  jsonrpc.rs  mod.rs  monitoring_logs.rs  select.rs  server.rs  state.rs  upstream.rs
src/proxy/: handler.rs  mod.rs  protocol.rs  serve.rs  ws.rs
src/rpc/: blockchain_rpc.rs  mod.rs  native_call.rs
src/upstream/: allowance.rs  availability.rs  block_updates.rs  disabled_methods.rs  egress.rs  fanout.rs  head.rs  http_error.rs  id.rs  identified.rs  label.rs  logged.rs  merged_head.rs  metered.rs  mod.rs  multistream.rs  router.rs  selector.rs  state.rs  status.rs  status_signal.rs  switch.rs  traits.rs  validation.rs
testdata/bitcoin/: unspent-one-addr.json
testdata/configs/: dshackle-monitoring-basic.yaml  upstreams-extra.yaml  upstreams-labels.yaml  upstreams-no-id.yaml  upstreams-priority.yaml  upstreams-roles-2.yaml  upstreams-ws-only.yaml
testdata/ethereum/: block-23122116-short.json  block-291.json
testdata/tls-local/: 127.0.0.1.invalid.key  127.0.0.1.key  ca.myhost.dev.crt  ca.myhost.dev.key
testing/: .gitignore  README.adoc
testing/dshackle/: README.adoc  dshackle-basic.yaml  dshackle-real.yaml  dshackle-rinkeby.yaml  dshackle.yaml  start.sh  test_key  test_key.pub
testing/simple-upstream/: README.adoc  build.gradle  settings.gradle  start.sh
testing/trial/: README.adoc  build.gradle  settings.gradle
(+1241 files in other folders)
