[package]
name = "dshackle"
version = "0.18.0-dev"
edition = "2024"

[dependencies]
clap = { version = "4.6", features = ["derive", "string"] }
serde = { version = "1.0" , features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
tokio = { version = "1.50", features = ["fs", "rt-multi-thread", "macros"] }
tokio-retry2 = { version = "0.9", features = ["jitter"] }
tokio-util = { version = "0.7" , features = ["io", "io-util"] }
tonic = { version = "0.14", features = ["tls-ring", "tls-native-roots", "gzip"] }
rustls = { version = "0.23", default-features = false }
futures = "0.3"
async-trait = "0.1"
ginepro = { git = "https://github.com/dmarteau/ginepro", branch = "tonic-0.14-support"}
emerald-api = { git = "https://github.com/emeraldpay/emerald-api-rs", features = ["server-blockchain", "client-blockchain"] }
enum-display-derive = "0.1"
futures-util = "0.3"
lazy_static = "1.5"
moka = { version = "0.12", features = ["sync"] }
alloy = { version = "1.8", features = ["rpc-types", "sol-types"] }
bitcoin = "0.32"
hex = "0.4.3"
shutdown = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dunce = "1.0"
jiff = "0.2"
regex = "1.11"
serde_yaml = "0.9"
shadow-rs = "1.1"
anyhow = { version = "1.0", features = ["backtrace"] }
bytes = "1.11"
itertools = "0.14"
prometheus = "0.14"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-native-roots"] }
url = "2"
warp = { version = "0.4", features = ["server", "websocket"] }
redis = { version = "1.2.2", features = ["tokio-comp", "connection-manager"] }
prost = "0.14"

[build-dependencies]
prost-build = "0.14"
shadow-rs = "1.1"

[dev-dependencies]
testcontainers = "0.27"
tempfile = "3.19"
rand = "0.10"
# Enables `warp::test` for the proxy filter tests without pulling it into the binary.
warp = { version = "0.4", features = ["test"] }


